# alarm_system

./: Dockerfile.api  pyproject.toml
src/alarm_system/api/: app.py
src/alarm_system/api/routes/: __init__.py  alerts.py  test_telegram.py
