[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm_system"
version = "0.1.0"
description = "Custom alerts system for Polymarket prediction markets"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "redis>=5.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "psycopg[binary]>=3.2.0",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
ingestion = [
    "websockets>=12.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "flake8>=7.0",
    "httpx>=0.27",
]

[project.scripts]
run-ingestion = "alarm_system.ingestion.run_ingestion:main"
run-service = "alarm_system.service_runtime:main"
run-worker = "alarm_system.service_runtime:main"
run-api = "alarm_system.run_api:main"
run-load-gate = "alarm_system.runtime_tools:run_load_gate_main"
run-rollback-gate = "alarm_system.runtime_tools:run_rollback_gate_main"
run-test-broadcast = "alarm_system.broadcast_test_alert:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alarm_system = ["schemas/*.json", "migrations/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
